feat: account api, docs, seed changed
