# controllers/account-controller.js
@@ -16,7 +16,7 @@ const accountController = {
       })
 
       // 整理回傳格式
-      const datas = accounts.map(account => ({
+      const data = accounts.map(account => ({
         userId: account.userId,
         accountId: account.id,
         name: account.name,
@@ -25,10 +25,15 @@ const accountController = {
         description: account.description,
         accountType: account['AccountType.name'],
       }))
-
+      // Calculate summary
+      // "summary": {
+      //   "totalAsset": 150000,
+      //   "liablilities": 50000,
+      //   "net": 100000
+      // }
       return res.status(200).json({
         status: 'succcess',
-        data: { accounts: datas },
+        data: { accounts: data },
       })
     } catch (error) {
       next(error)
@@ -50,18 +55,18 @@ const accountController = {
   postAccounts: async (req, res, next) => {
     try {
       const userId = req.user.id
-      const { name, initialAmount, type, description } = req.body
-
+      const { name, initialAmount, accountTypeId, description } = req.body
+      // validateAccount()
       await Account.create({
         userId,
         name,
         initialAmount,
         description,
-        accountTypeId: type,
+        accountTypeId,
       })
       return res
         .status(200)
-        .json({ status: 'success', message: 'Account created.' })
+        .json({ status: 'success', message: 'Account created' })
     } catch (err) {
       next(err)
     }
@@ -74,14 +79,14 @@ const accountController = {
       const account = await Account.findOne({ where: { id, userId } })
       if (!account)
         return res
-          .status(404)
-          .json({ status: 'error', message: 'User or account not found!' })
+          .status(406)
+          .json({ status: 'error', message: 'Request not acceptable' })
 
       // 若在資料庫有找到account，刪除該筆account
       await account.destroy()
       return res
         .status(200)
-        .json({ status: 'success', message: 'Account deleted.' })
+        .json({ status: 'success', message: 'Account deleted' })
     } catch (error) {
       next(error)
     }
@@ -89,12 +94,9 @@ const accountController = {
   putAccount: async (req, res, next) => {
     try {
       const id = req.params.id
-      if (!id)
-        return res
-          .status(400)
-          .json({ status: 'error', message: 'Please enter account id.' })
       const userId = req.user.id
-      const { name, initialAmount, type, description } = req.body // 通過middleware驗證的欄位
+      // validateAccount()
+      const { name, initialAmount, accountTypeId, description } = req.body // 通過middleware驗證的欄位
 
       const account = await Account.findOne({
         where: { id, userId },
@@ -113,19 +115,19 @@ const accountController = {
       })
       if (!account)
         return res
-          .status(404)
-          .json({ status: 'error', message: 'User or account not found!' })
+          .status(406)
+          .json({ status: 'error', message: 'Request not acceptable' })
 
       // 如果該account存在且req.body內容通過驗證
       const accountUpdated = await account.update({
         name,
         initialAmount,
-        accountTypeId: type,
+        accountTypeId,
         description,
       })
 
       // 整理回傳格式
-      const datas = {
+      const data = {
         accountId: accountUpdated.id,
         name: accountUpdated.name,
         initialAmount: accountUpdated.initialAmount,
@@ -134,7 +136,7 @@ const accountController = {
       }
       return res
         .status(200)
-        .json({ status: 'success', data: { account: datas } })
+        .json({ status: 'success', data: { account: data } })
     } catch (error) {
       next(error)
     }
